k8s_resources/statefullset/airflow.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestration
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: orchestration
spec:
  selector:
    app: airflow-redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-redis
  namespace: orchestration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-redis
  template:
    metadata:
      labels:
        app: airflow-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: orchestration
spec:
  selector:
    app: airflow-postgres
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-postgres
  namespace: orchestration
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: airflow-postgres
  template:
    metadata:
      labels:
        app: airflow-postgres
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: hcloud-volumes
        resources:
          requests:
            storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: orchestration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      serviceAccountName: airflow
      volumes:
        - name: dags
          emptyDir: {}
        - name: site-packages
          emptyDir: {}
        - name: requirements
          configMap:
            name: airflow-requirements
      containers:
        - name: scheduler
          image: pradovalmur/airflow:2.10.2-dbt
          command: ["bash","-c"]
          args:
            - |
              until nc -z postgres 5432; do sleep 3; done
              until nc -z redis 6379; do sleep 3; done
              exec /entrypoint airflow scheduler
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
            - name: site-packages
              mountPath: /opt/airflow/custom-packages
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.2.3
          volumeMounts:
            - name: dags
              mountPath: /git
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
  namespace: orchestration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-worker
  template:
    metadata:
      labels:
        app: airflow-worker
    spec:
      serviceAccountName: airflow
      volumes:
        - name: dags
          emptyDir: {}
        - name: site-packages
          emptyDir: {}
        - name: requirements
          configMap:
            name: airflow-requirements
      containers:
        - name: worker
          image: pradovalmur/airflow:2.10.2-dbt
          command: ["bash","-c"]
          args:
            - |
              until nc -z postgres 5432; do sleep 3; done
              until nc -z redis 6379; do sleep 3; done
              exec /entrypoint airflow celery worker
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
            - name: site-packages
              mountPath: /opt/airflow/custom-packages
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.2.3
          volumeMounts:
            - name: dags
              mountPath: /git
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: orchestration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      serviceAccountName: airflow
      volumes:
        - name: dags
          emptyDir: {}
        - name: site-packages
          emptyDir: {}
        - name: requirements
          configMap:
            name: airflow-requirements
      containers:
        - name: webserver
          image: pradovalmur/airflow:2.10.2-dbt
          command: ["bash","-c"]
          args:
            - |
              until nc -z postgres 5432; do sleep 3; done
              until nc -z redis 6379; do sleep 3; done
              exec /entrypoint airflow webserver --port 8080
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
            - name: site-packages
              mountPath: /opt/airflow/custom-packages
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.2.3
          volumeMounts:
            - name: dags
              mountPath: /git
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-web
  namespace: orchestration
spec:
  selector:
    app: airflow-webserver
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  namespace: orchestration
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [airflow.chameleonmountain.com]
      secretName: wildcard-tls
  rules:
    - host: airflow.chameleonmountain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-web
                port:
                  number: 8080
